<resources>
    <string name="app_name">AppEVC03</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_login">"Iniciar Sesión"</string>
    <string name="valetemail">"Ingrese su nombre"</string>
    <string name="valetcontraseña">Ingrese su contraseña</string>
    <string name="valbtnacceder">Acceder</string>
    <string name="tvNombreLocal">Tu perro como en casa</string>
    <string name="tvTituloDescrp">Sobre Carlos Ventura:</string>
    <string name="tvDescripcion">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras luctus pulvinar ligula nec porta. Aliquam viverra magna risus, vel tincidunt elit hendrerit quis.</string>
    <string name="tvTituloAlojam">Descripción de Alojamiento</string>
    <string name="tvTituloForm">CONFIRMA TU RESERVA</string>
    <string name="btnReservar">Reservar Ahora</string>
    <string name="etdTituloIngreso">Fecha de Ingreso</string>
    <string name="edtTituloSalida">Fecha de Salida</string>
    <string name="menu_formulario">"Formulario de Reserva"</string>
    <string name="tvTituloReservas">Reservas Realizadas</string>
    <string name="menu_inforeservas">Lista de Reservas</string>
    <string name="menu_listado">Listado</string>
</resources>