<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/loginFragment"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_login"/>
        <item
            android:id="@+id/formularioFragment"
            android:icon="@drawable/ic_formulario"
            android:title="@string/menu_formulario" />
        <item
            android:id="@+id/listadoFragment"
            android:icon="@drawable/ic_lista"
            android:title="@string/menu_listado" />
        <item
            android:id="@+id/infoReservasFragment"
            android:icon="@drawable/ic_lista"
            android:title="@string/menu_inforeservas" />
    </group>
</menu>