<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.appevc03.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/formularioFragment"
        android:name="com.example.appevc03.FormularioFragment"
        android:label="@string/menu_formulario"
        tools:layout="@layout/fragment_formulario" />
    <fragment
        android:id="@+id/infoReservasFragment"
        android:name="com.example.appevc03.InfoReservasFragment"
        android:label="@string/menu_inforeservas"
        tools:layout="@layout/fragment_info_reservas" />
    <fragment
        android:id="@+id/listadoFragment"
        android:name="com.example.appevc03.ListadoFragment"
        android:label="@string/menu_listado"
        tools:layout="@layout/fragment_listado" />
</navigation>